--- a/public_html/sites/all/themes/ringstedtheme/scss/partials/_school_event.scss
+++ b/public_html/sites/all/themes/ringstedtheme/scss/partials/_school_event.scss
@@ -39,6 +39,9 @@
 .view-school-events-list {
   .views-row {
     position: relative;
+    .field-name-field-school-event-price {
+      display: block !important;
+    }
   }
   .views-field-nothing {
     .field {
